<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.example.krushitpatel.netflixshows.Activity.MainActivity">
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <EditText
        android:id="@+id/searchMovie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:hint="Search by Movie Title !">
    </EditText>
    <EditText
        android:id="@+id/searchActor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchMovie"
        android:layout_marginRight="100dp"
        android:hint="Search by Actor !">
    </EditText>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Spin"
        android:id="@+id/searchButton"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/searchActor"
        android:layout_alignEnd="@+id/searchActor"
        android:layout_marginRight="58dp"
        android:layout_marginEnd="58dp" />
</RelativeLayout>
</android.support.constraint.ConstraintLayout>
