...
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/card_margin"
    app:cardBackgroundColor="#30c1d1"
    >
...
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@+id/imagePoster"
            android:layout_toRightOf="@+id/imagePoster"
            android:text="TextView"
            android:textColor="@android:color/white" />

        <RatingBar
            android:id="@+id/ratingBar"
...
